fixed problem with mobile view on safari iOs

--- a/sass/_keyboard.scss
+++ b/sass/_keyboard.scss
@@ -54,6 +54,7 @@
     border-radius: 5px;
     width: 2rem;
     height: 50px;
+    padding: 0px;
   }
 
   #Enter {
